--- a/Styles/header.css
+++ b/Styles/header.css
@@ -153,3 +153,111 @@ nav .search-icon {
     }
 }
 
+/* Testing */
+
+/* ------------------------ SLIDER ------------------------ */
+.slides {
+    width: 100%;
+    margin-top: 10px;
+}
+
+img {
+    width: 100%;
+    height: 500px;
+}
+
+.slideshow {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 20px;
+    margin-top: -22px;
+    color: #fff;
+    font-weight: 900;
+    font-size: 18px;
+    transition: 0.6s ease;
+    user-select: none;
+    border-radius: 5px;
+}
+
+.next {
+    right: 0;
+}
+
+.prev:hover,
+.next:hover {
+    background: #717171;
+}
+
+.caption {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.slideNumber {
+    color: #fff;
+    font-size: 18px;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.pointer {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbbbbb8f;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.pointer:hover {
+    background: #7171719a;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .5;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 1020px) {
+    img{
+        height: 300px;
+    }
+}
+
+/* ------------------------ Notice & Youtube Section ------------------------ */
+
+.notice-youtube{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
