--- a/Styles/header.css
+++ b/Styles/header.css
@@ -112,7 +112,7 @@ nav .search-icon {
         height: 100%;
         padding: 5px 50px 0 50px;
         text-align: center;
-        background: #90EE90;
+        background: #712940;
         transition: left 0.3s ease;
     }
 
