--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -77,5 +77,6 @@
 @media screen and (max-width: 980px) {
     .footer{
         grid-template-columns: repeat(1, 1fr);
+        padding-bottom: 30px;
     }
 }
