--- a/Styles/todaysactivities.css
+++ b/Styles/todaysactivities.css
@@ -17,6 +17,7 @@
     margin: 20px;
 }
 .todaysactivities-title{
+    margin-top: 10px;
     text-align: center;
     font-size: 40px;
     font-weight: 900;
