--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -15,6 +15,10 @@
     margin-right: 20px;
     font-size: 25px;
 }
+.map{
+    height: 400px; 
+    width: 400px;
+}
 .contract-form {
     max-width: 700px;
     margin-right: 50px;
@@ -86,6 +90,13 @@
         width: 100%;
     }
     
+}
+@media screen and (max-width: 520px) {
+    
+    .map{
+        width: 100%;
+        height: 150px;
+    }
 }
 @media screen and (max-width: 450px) {
     .contract-info {
