--- a/Styles/header.css
+++ b/Styles/header.css
@@ -154,3 +154,16 @@ nav .search-icon {
     }
 }
 
+/* --------------------- FOR SCROLL BAR --------------------- */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(transparent, #712940);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(transparent, #AA9EB8);
+}
