--- a/Styles/traning.css
+++ b/Styles/traning.css
@@ -2,6 +2,9 @@
     margin: 20px;
     text-align: center;
 }
+h3{
+    margin-bottom: 20px;
+}
 .traning-title{
     font-size: 40px;
     font-weight: 900;
