--- a/Styles/index.css
+++ b/Styles/index.css
@@ -91,53 +91,129 @@ img {
 }
 
 @media screen and (max-width: 1020px) {
-    img{
+    img {
         height: 300px;
     }
 }
 
 /* ------------------------ Notice & Youtube Section ------------------------ */
 
-/* .notice-youtube{
+.notice-youtube {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
     margin-left: 20%;
 }
-.notices{
-    
-}
-.notice{
+
+.notice {
     width: 200%;
-    padding: 10%;
     display: flex;
-    gap: 30%;
-    background: #90EE90;
+    align-items: center;
+    margin-bottom: 5px;
 }
-.notice-title{
-    font-size: 40px;
+
+.date {
+    background: #712940;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    color: #fff;
+    text-align: center;
+    height: 100px;
+    width: 100px;
 }
-.youtube-video{
+
+.day {
+    font-size: 14px;
+    font-weight: 100;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.month {
+    font-size: 18px;
+    font-weight: 300;
+    margin-bottom: 5px;
+}
+
+.year {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.notice-title {
+    font-size: 25px;
+    font-weight: 700;
+    background: #B48C9C;
+    color: #fff;
+    height: 100px;
+    width: 500px;
+    padding-left: 10px;
+    padding-top: 30px;
+    text-decoration: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.youtube-video {
     width: 600px;
     height: 400px;
+    border-radius: 10px;
+    margin-right: 20px;
 }
 
-@media screen and (max-width: 1180px) {
-    .notice-youtube{
-        flex-direction: column;
-        gap: 20px;
-    }
-    .notice{
-        padding: 2%;
-        width: 80%;
-    }
-    .youtube-video{
-        width: 80%;
+@media screen and (max-width: 1600px) {
+    .notice-youtube {
+
+        margin-left: 10%;
     }
 }
-@media screen and (max-width: 520px) {
-    .notice-youtube{
+
+@media screen and (max-width: 1380px) {
+    .notice-youtube {
+
         margin-left: 5%;
     }
-} */
+}
 
+@media screen and (max-width: 1300px) {
+    .notice-youtube {
+        flex-direction: column;
+        margin-left: 2%;
+    }
+
+    .notices {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .notice {
+        width: 100%;
+    }
+
+    .notice-title {
+        width: 100%;
+        margin-right: 20px;
+    }
+
+    .youtube-video {
+        width: 95%;
+        margin-right: 2%;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .notice-title {
+        font-size: 20px;
+    }
+
+    .youtube-video {
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .notice-title {
+        padding-top: 20px;
+
+    }
+}
