--- a/Styles/contact.css
+++ b/Styles/contact.css
@@ -16,7 +16,7 @@
     font-size: 25px;
 }
 .map{
-    height: 400px; 
+    height: 200px; 
     width: 400px;
 }
 .contract-form {
@@ -30,23 +30,26 @@
     color: #712940;
     text-align: center;
     font-size: 35px;
-    text-transform: uppercase;
     margin-bottom: 30px;
 }
 .contract-form .text-box {
-    background: #000;
-    color: #fff;
+    background: #7129408e;
+    color: #000;
     border: none;
     width: calc(50% - 10px);
     height: 50px;
     padding: 10px;
     font-size: 16px;
+    letter-spacing: 0.5px;
     border-radius: 5px;
     margin-bottom: 20px;
 }
+::placeholder{
+    color: #000;
+}
 .contract-form textarea {
-    background: #000;
-    color: #fff;
+    background: #7129408e;
+    color: #000;
     border: none;
     width: 100%;
     padding: 10px;
@@ -65,7 +68,6 @@
     height: 40px;
     font-size: 18px;
     font-weight: 600;
-    text-transform: uppercase;
     letter-spacing: 2px;
     border-radius: 5px;
     cursor: pointer;
