--- a/Styles/story.css
+++ b/Styles/story.css
@@ -20,6 +20,30 @@
     font-size: 50px;
     color: #712940;
 }
+.images{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+img{
+    width: 90%;
+    height: 400px;
+    border-radius: 20px;
+}
+@media screen and (max-width: 880px) {
+    .images{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    img{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 480px) {
+    img{
+        height: 200px;
+    }
+}
 @media screen and (max-width: 380px) {
     .story-title{
         font-size: 30px;
