--- a/Styles/singelcareer.css
+++ b/Styles/singelcareer.css
@@ -9,8 +9,7 @@
     border-bottom: 2px solid #712940;
 }
 .career-decriptions-text{
-    margin: 10px;
-    text-align: center;
+    margin: 20px;
     font-size: 18px;
     color: #000000c0;
     letter-spacing: 0.5px;
@@ -19,7 +18,12 @@
     margin-top: 30px;
     margin-left: 20px;
     font-size: 22px;
-    text-decoration: underline;
+    color: #712940;
+}
+.career-decriptions-header2{
+    margin-top: 30px;
+    margin-left: 20px;
+    font-size: 18px;
     color: #712940;
 }
 .list{
@@ -44,4 +48,31 @@
     border-radius: 10px;
     background: #712940;
     color: #fff;
+}
+.career-decriptions-list {
+    margin: 10px;
+}
+
+.career-decriptions-list li {
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    color: #000000b8;
+}
+.apply-now {
+    margin: 10px 30px;
+    text-decoration: none;
+    border: 2px solid #712940;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #712940;
+    padding: 5px;
+}
+
+.apply-now:hover {
+    background: #712940;
+    color: #fff;
+    border-radius: 5px;
 }
