--- a/Styles/patners.css
+++ b/Styles/patners.css
@@ -17,7 +17,7 @@
 }
 .patner{
     padding: 5px;
-    height: 300px;
+    height: 320px;
     width: 300px;
     text-align: center;
     background: #B48C9C;
@@ -26,11 +26,12 @@
 .patner img{
     height: 80%;
     width: 90%;
+    border-radius: 5px;
     transition: width 1s, height 1s;
 }
 .patner:hover img{
     width: 100%;
-    height: 90%;
+    height: 85%;
 }
 .patner-txt{
     font-size: 18px;
