--- a/Styles/index.css
+++ b/Styles/index.css
@@ -26,7 +26,7 @@ img {
     width: auto;
     padding: 20px;
     margin-top: -22px;
-    color: #fff;
+    color: #712940;
     font-weight: 900;
     font-size: 18px;
     transition: 0.6s ease;
