--- a/Styles/todaysactivities.css
+++ b/Styles/todaysactivities.css
@@ -14,7 +14,7 @@
     color: #fff;
 }
 .todaysactivities{
-    margin: 20px;
+    margin: 100px 20px;
 }
 .todaysactivities-title{
     margin-top: 10px;
